// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntitiesInput.vue newEntity emit new event change text to "my name is" renders correctly 1`] = `
<bhinput-stub>
  <div class="entities-input__badges"></div>
  <div class="entities-input__new-entity">
    <newentity-stub class="entities-input__new-entity__wrapper"></newentity-stub>
  </div>
</bhinput-stub>
`;

exports[`EntitiesInput.vue newEntity emit new event renders correctly 1`] = `
<bhinput-stub>
  <div class="entities-input__badges">
    <bhbadge-stub class="entities-input__badges__badge entity-sunflower"><span><span><strong>name</strong></span>
      <!---->
      </span>
      <bhdropdown-stub>
        <bhdropdownitem-stub>Edit</bhdropdownitem-stub>
        <bhdropdownitem-stub>Remove</bhdropdownitem-stub>
      </bhdropdown-stub>
    </bhbadge-stub>
  </div>
  <div class="entities-input__new-entity">
    <newentity-stub class="entities-input__new-entity__wrapper"></newentity-stub>
  </div>
</bhinput-stub>
`;

exports[`EntitiesInput.vue renders correctly 1`] = `
<bhinput-stub>
  <div class="entities-input__badges"></div>
  <div class="entities-input__new-entity">
    <newentity-stub class="entities-input__new-entity__wrapper"></newentity-stub>
  </div>
</bhinput-stub>
`;
